# pico-examples

./: CMakeLists.txt
flash/nuke/: CMakeLists.txt
i2c/oled_i2c/: oled_i2c.c
i2c/pa1010d_i2c/: CMakeLists.txt  pa1010d_i2c.c
i2c/ssd1306_i2c/: ssd1306_i2c.c
iar-build/: .gitignore  pico_examples.eww
iar-build/adc/adc_console/: adc_console.ewp
iar-build/adc/dma_capture/: adc_dma_capture.ewp
iar-build/adc/hello_adc/: hello_adc.ewp
iar-build/adc/joystick_display/: joystick_display.ewp
iar-build/adc/microphone_adc/: microphone_adc.ewp
iar-build/adc/onboard_temperature/: onboard_temperature.ewp
iar-build/blink/: blink.ewp
iar-build/clocks/detached_clk_peri/: clocks_detached_clk_peri.ewp
iar-build/clocks/hello_48MHz/: hello_48MHz.ewp
iar-build/clocks/hello_gpout/: hello_gpout.ewp
iar-build/clocks/hello_resus/: hello_resus.ewp
iar-build/cmake/build_variants/: build_variant1.ewp  build_variant2.ewp
iar-build/divider/: hello_divider.ewp
iar-build/dma/channel_irq/: dma_channel_irq.ewp
iar-build/dma/control_blocks/: dma_control_blocks.ewp
iar-build/dma/hello_dma/: hello_dma.ewp
iar-build/dma/sniff_crc/: sniff_crc.ewp
iar-build/flash/cache_perfctr/: flash_cache_perfctr.ewp
iar-build/flash/nuke/: flash_nuke.ewp
iar-build/flash/program/: flash_program.ewp
iar-build/flash/ssi_dma/: flash_ssi_dma.ewp
iar-build/flash/xip_stream/: flash_xip_stream.ewp
iar-build/gpio/dht_sensor/: dht.ewp
iar-build/gpio/hello_7segment/: hello_7segment.ewp
iar-build/gpio/hello_gpio_irq/: hello_gpio_irq.ewp
usb/: CMakeLists.txt
usb/host/: CMakeLists.txt
(+88 files in other folders)
